--- a/app/sass/_colors.scss
+++ b/app/sass/_colors.scss
@@ -2,3 +2,16 @@
 $popup-back: rgba( 0, 0, 0, .5 );
 $popup-close-back: rgba( 255, 255, 255, 1 );
 /*---------- /popup ---------*/
+
+/*---------- btn ----------*/
+$btn-back: #ff0;
+$btn-back-hover: #ffa;
+$btn-back-active: #000;
+$btn-color: #000;
+$btn-color-active: #ff0;
+
+$btn-2-back: #f00;
+$btn-2-back-hover: #f0a;
+$btn-2-back-active: #000;
+$btn-2-color-active: #f0a;
+/*---------- /btn ---------*/
