--- a/app/sass/_mixins.scss
+++ b/app/sass/_mixins.scss
@@ -1,3 +1,10 @@
+//fonts
+@mixin main-font1() {
+  font-family: "myriadpro-regular", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @mixin justify() {
   text-align: justify;
 
