ui checkbox & radio

--- a/app/sass/_colors.scss
+++ b/app/sass/_colors.scss
@@ -3,6 +3,16 @@ $popup-back: rgba( 0, 0, 0, .5 );
 $popup-close-back: rgba( 255, 255, 255, 1 );
 /*---------- /popup ---------*/
 
+/*---------- nice-radio ----------*/
+$nice-radio-after-color: #000;
+$nice-radio-color: #000;
+/*---------- /nice-radio ---------*/
+
+/*---------- nice-checkbox ----------*/
+$nice-checkbox-after-color: #000;
+$nice-checkbox-color: #000;
+/*---------- /nice-checkbox ---------*/
+
 /*---------- btn ----------*/
 $btn-back: #ff0;
 $btn-back-hover: #ffa;
