--- a/app/sass/_colors.scss
+++ b/app/sass/_colors.scss
@@ -3,6 +3,13 @@ $popup-back: rgba( 0, 0, 0, .5 );
 $popup-close-back: rgba( 255, 255, 255, 1 );
 /*---------- /popup ---------*/
 
+/*---------- websters-select ----------*/
+$websters-select-border: #000;
+$websters-select-popup-back: #fff;
+$websters-select-popup-item-active-color: #fff;
+$websters-select-popup-item-active-back: #f00;
+/*---------- /websters-select ---------*/
+
 /*---------- nice-radio ----------*/
 $nice-radio-after-color: #000;
 $nice-radio-color: #000;
