--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,2 +1,11 @@
-@import "main";
+// Main(default) styles
+@import "main/main";
 @import "site";
+
+//Fonts
+@import "fonts/myriadpro-regular";
+@import "fonts/open-sans";
+
+// Blocks
+@import "blocks/btn";
+@import "blocks/myblock";
