--- a/app/sass/ui-page.scss
+++ b/app/sass/ui-page.scss
@@ -1,9 +1,11 @@
-@import "main";
-@import "fonts/myriadpro-regular";
+// Main(default) styles
+@import "main/main";
 @import "ui";
-@import "btn";
-@import "popup";
-@import "websters-select";
-@import "nice-radio";
-@import "nice-checkbox";
-@import "tabs";
+
+//Fonts
+@import "fonts/myriadpro-regular";
+@import "fonts/open-sans";
+
+// Blocks
+@import "blocks/btn";
+@import "blocks/myblock";
