--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -1,5 +1,9 @@
 .site {
-  @include justify;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  min-height: 100%;
+  font-family: 'Open Sans', sans-serif;
 
 }
 @media (min-width: $phone-landscape) {
